--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,168 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-/* 🔹 SAME UI (unchanged) */
 :root{
-  --bg:#eae6df;--header:#075e54;--my:#dcf8c6;
-  --other:#ffffff;--accent:#25d366;
+  --bg:#eae6df;
+  --header:#075e54;
+  --my:#dcf8c6;
+  --other:#ffffff;
+  --accent:#25d366;
 }
 *{box-sizing:border-box}
-body{margin:0;font-family:Segoe UI;background:var(--bg);height:100vh;overflow:hidden}
-.header{background:var(--header);color:white;padding:14px;text-align:center}
-.username{padding:8px;background:#f5f5f5}
-.username input{width:100%;padding:10px;margin-bottom:6px;border-radius:8px;border:1px solid #ccc}
-.chat{height:calc(100vh - 230px);overflow-y:auto;padding:10px}
-.msg{max-width:75%;padding:8px 12px;margin:8px 0;border-radius:14px;font-size:14px;opacity:0}
-.user{font-size:11px;color:#555;margin-bottom:3px}
-.right{background:var(--my);margin-left:auto;border-bottom-right-radius:0;animation:send .3s forwards}
-.left{background:var(--other);margin-right:auto;border-bottom-left-radius:0;animation:recv .3s forwards}
-@keyframes send{from{transform:translateX(40px);opacity:0}to{opacity:1}}
-@keyframes recv{from{transform:translateX(-40px);opacity:0}to{opacity:1}}
-.tick{font-size:11px;color:#777}.seen{color:#2196f3}
-.input-box{display:flex;padding:10px;background:#f0f0f0}
-.input-box input{flex:1;padding:10px;border-radius:25px;border:1px solid #ccc}
-.input-box button{margin-left:8px;width:45px;height:45px;border:none;border-radius:50%;background:var(--accent);color:white}
+body{
+  margin:0;
+  font-family:"Segoe UI", Arial;
+  background:var(--bg);
+  height:100vh;
+  overflow:hidden;
+}
+
+/* ===== SPLASH (SAME AS OLD UI) ===== */
+#splash{
+  position:fixed;
+  inset:0;
+  background:linear-gradient(135deg,#075e54,#25d366);
+  color:white;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  z-index:999;
+  animation:fadeOut 1s ease 3s forwards;
+}
+#splash h1{
+  font-size:28px;
+  margin:0;
+  animation:scaleIn 1s ease;
+}
+#splash p{
+  margin-top:10px;
+  font-size:14px;
+  opacity:.9;
+  animation:slideUp 1.2s ease;
+}
+@keyframes fadeOut{to{opacity:0;visibility:hidden}}
+@keyframes scaleIn{from{transform:scale(.7);opacity:0}to{transform:scale(1);opacity:1}}
+@keyframes slideUp{from{transform:translateY(20px);opacity:0}to{transform:translateY(0);opacity:1}}
+
+/* ===== HEADER ===== */
+.header{
+  background:var(--header);
+  color:white;
+  padding:14px;
+  text-align:center;
+  font-size:18px;
+  font-weight:600;
+}
+
+/* ===== USER INPUT ===== */
+.username{
+  padding:8px;
+  background:#f5f5f5;
+}
+.username input{
+  width:100%;
+  padding:10px;
+  margin-bottom:6px;
+  border-radius:8px;
+  border:1px solid #ccc;
+}
+
+/* ===== CHAT ===== */
+.chat{
+  height:calc(100vh - 240px);
+  overflow-y:auto;
+  padding:10px;
+}
+
+/* ===== MESSAGE ===== */
+.msg{
+  max-width:75%;
+  padding:8px 12px;
+  margin:8px 0;
+  border-radius:14px;
+  font-size:14px;
+  opacity:0;
+}
+.user{
+  font-size:11px;
+  color:#555;
+  margin-bottom:3px;
+}
+.right{
+  background:var(--my);
+  margin-left:auto;
+  border-bottom-right-radius:0;
+  animation:sendAnim .35s ease forwards;
+}
+.left{
+  background:var(--other);
+  margin-right:auto;
+  border-bottom-left-radius:0;
+  animation:receiveAnim .35s ease forwards;
+}
+@keyframes sendAnim{
+  from{transform:translateX(40px) scale(.9);opacity:0}
+  to{transform:translateX(0) scale(1);opacity:1}
+}
+@keyframes receiveAnim{
+  from{transform:translateX(-40px) scale(.9);opacity:0}
+  to{transform:translateX(0) scale(1);opacity:1}
+}
+
+/* ===== TICKS ===== */
+.tick{
+  font-size:11px;
+  color:#777;
+}
+.seen{
+  color:#2196f3;
+}
+.tick-box{
+  text-align:right;
+  margin-top:2px;
+}
+
+/* ===== INPUT ===== */
+.input-box{
+  display:flex;
+  padding:10px;
+  background:#f0f0f0;
+}
+.input-box input{
+  flex:1;
+  padding:10px 15px;
+  border-radius:25px;
+  border:1px solid #ccc;
+}
+.input-box button{
+  margin-left:8px;
+  width:45px;
+  height:45px;
+  border:none;
+  border-radius:50%;
+  background:var(--accent);
+  color:white;
+  font-size:18px;
+}
+.input-box button:active{transform:scale(.9)}
+
+.footer{
+  text-align:center;
+  font-size:12px;
+  color:#555;
+  padding:6px;
+}
 </style>
 </head>
 
 <body>
+
+<!-- SPLASH -->
+<div id="splash">
+  <h1>💬 Chat App</h1>
+  <p>Developed by <b>Sanchay Dutt</b></p>
+</div>
 
 <div class="header">Private Chat</div>
 
@@ -46,6 +183,8 @@ body{margin:0;font-family:Segoe UI;background:var(--bg);height:100vh;overflow:hi
   <button id="send">➤</button>
 </div>
 
+<div class="footer">Developed by Sanchay Dutt</div>
+
 <script src="/socket.io/socket.io.js"></script>
 <script>
 const socket = io();
@@ -53,7 +192,7 @@ const chat = document.getElementById("chat");
 const userInput = document.getElementById("username");
 const friendInput = document.getElementById("friend");
 
-// JOIN ROOM WHEN BOTH NAMES ENTERED
+/* JOIN PRIVATE ROOM */
 function joinRoom(){
   if(userInput.value && friendInput.value){
     socket.emit("joinRoom",{
@@ -80,13 +219,18 @@ function send(){
 socket.on("receiveMessage",data=>{
   const mine = data.user === userInput.value;
   const div = document.createElement("div");
+
   div.className = "msg " + (mine?"right":"left");
-  div.setAttribute("data-id",data.id);
+  div.setAttribute("data-id", data.id);
+
   div.innerHTML = `
     <div class="user">${data.user}</div>
     <div>${data.message}</div>
-    ${mine?`<span class="tick" id="t${data.id}">✔✔</span>`:""}
+    ${mine?`<div class="tick-box">
+      <span class="tick" id="t${data.id}">✔✔</span>
+    </div>`:""}
   `;
+
   chat.appendChild(div);
   chat.scrollTop = chat.scrollHeight;
 
