--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@ body{
   overflow:hidden;
 }
 
-/* ===== SPLASH ===== */
+/* SPLASH */
 #splash{
   position:fixed;
   inset:0;
@@ -35,22 +35,8 @@ body{
   z-index:999;
   animation:fadeOut 1s ease 3s forwards;
 }
-#splash h1{
-  font-size:28px;
-  margin:0;
-  animation:scaleIn 1s ease;
-}
-#splash p{
-  margin-top:10px;
-  font-size:14px;
-  opacity:.9;
-  animation:slideUp 1.2s ease;
-}
 @keyframes fadeOut{to{opacity:0;visibility:hidden}}
-@keyframes scaleIn{from{transform:scale(.7);opacity:0}to{transform:scale(1);opacity:1}}
-@keyframes slideUp{from{transform:translateY(20px);opacity:0}to{transform:translateY(0);opacity:1}}
 
-/* ===== HEADER ===== */
 .header{
   background:var(--header);
   color:white;
@@ -60,7 +46,7 @@ body{
   font-weight:600;
 }
 
-/* ===== USER INPUT ===== */
+/* LOGIN */
 .username{
   padding:8px;
   background:#f5f5f5;
@@ -73,14 +59,12 @@ body{
   border:1px solid #ccc;
 }
 
-/* ===== CHAT ===== */
+/* CHAT */
 .chat{
-  height:calc(100vh - 240px);
+  height:calc(100vh - 270px);
   overflow-y:auto;
   padding:10px;
 }
-
-/* ===== MESSAGE ===== */
 .msg{
   max-width:75%;
   padding:8px 12px;
@@ -89,83 +73,52 @@ body{
   font-size:14px;
   opacity:0;
 }
-.user{
-  font-size:11px;
-  color:#555;
-  margin-bottom:3px;
-}
+.user{font-size:11px;color:#555;margin-bottom:3px}
 .right{
   background:var(--my);
   margin-left:auto;
   border-bottom-right-radius:0;
-  animation:sendAnim .35s ease forwards;
+  animation:send .3s forwards;
 }
 .left{
   background:var(--other);
   margin-right:auto;
   border-bottom-left-radius:0;
-  animation:receiveAnim .35s ease forwards;
+  animation:recv .3s forwards;
 }
-@keyframes sendAnim{
-  from{transform:translateX(40px) scale(.9);opacity:0}
-  to{transform:translateX(0) scale(1);opacity:1}
-}
-@keyframes receiveAnim{
-  from{transform:translateX(-40px) scale(.9);opacity:0}
-  to{transform:translateX(0) scale(1);opacity:1}
-}
+@keyframes send{from{transform:translateX(40px);opacity:0}to{opacity:1}}
+@keyframes recv{from{transform:translateX(-40px);opacity:0}to{opacity:1}}
 
-/* ===== TICKS ===== */
 .tick{font-size:11px;color:#777}
 .seen{color:#2196f3}
 .tick-box{text-align:right;margin-top:2px}
 
-/* ===== INPUT ===== */
 .input-box{
-  display:flex;
-  padding:10px;
-  background:#f0f0f0;
+  display:flex;padding:10px;background:#f0f0f0
 }
 .input-box input{
-  flex:1;
-  padding:10px 15px;
-  border-radius:25px;
-  border:1px solid #ccc;
+  flex:1;padding:10px;border-radius:25px;border:1px solid #ccc
 }
 .input-box button{
-  margin-left:8px;
-  width:45px;
-  height:45px;
-  border:none;
-  border-radius:50%;
-  background:var(--accent);
-  color:white;
-  font-size:18px;
+  margin-left:8px;width:45px;height:45px;border:none;
+  border-radius:50%;background:var(--accent);color:white
 }
-.input-box button:active{transform:scale(.9)}
-
-.footer{
-  text-align:center;
-  font-size:12px;
-  color:#555;
-  padding:6px;
-}
+.footer{text-align:center;font-size:12px;color:#555;padding:6px}
 </style>
 </head>
 
 <body>
 
-<!-- SPLASH -->
 <div id="splash">
-  <h1>💬 Chat App</h1>
+  <h2>Chat App</h2>
   <p>Developed by <b>Sanchay Dutt</b></p>
 </div>
 
 <div class="header">Private Chat</div>
 
 <div class="username">
-  <input id="username" placeholder="Your name">
-  <input id="friend" placeholder="Friend name">
+  <input id="userId" placeholder="User ID">
+  <input id="password" type="password" placeholder="Password">
 </div>
 
 <div id="chat" class="chat"></div>
@@ -177,7 +130,6 @@ body{
 
 <div class="footer">Developed by Sanchay Dutt</div>
 
-<!-- 🔊 SOUND FILES -->
 <audio id="sendSound" src="send.mp3"></audio>
 <audio id="receiveSound" src="receive.mp3"></audio>
 
@@ -185,68 +137,61 @@ body{
 <script>
 const socket = io();
 const chat = document.getElementById("chat");
-const userInput = document.getElementById("username");
-const friendInput = document.getElementById("friend");
+const userIdInput = document.getElementById("userId");
+const passwordInput = document.getElementById("password");
 const sendSound = document.getElementById("sendSound");
 const receiveSound = document.getElementById("receiveSound");
 
-/* JOIN PRIVATE ROOM */
+// JOIN ROOM
 function joinRoom(){
-  if(userInput.value && friendInput.value){
+  if(userIdInput.value && passwordInput.value){
     socket.emit("joinRoom",{
-      user:userInput.value,
-      friend:friendInput.value
+      userId:userIdInput.value,
+      password:passwordInput.value
     });
   }
 }
-userInput.onblur = joinRoom;
-friendInput.onblur = joinRoom;
+userIdInput.onblur = joinRoom;
+passwordInput.onblur = joinRoom;
 
 document.getElementById("send").onclick = send;
-document.getElementById("message").addEventListener("keypress",e=>{
-  if(e.key==="Enter") send();
-});
 
 function send(){
-  const user = userInput.value.trim();
-  const friend = friendInput.value.trim();
-  const msg = message.value.trim();
-  if(!user || !friend || !msg) return;
+  if(!userIdInput.value || !passwordInput.value || !message.value) return;
 
-  socket.emit("sendMessage",{user,friend,message:msg});
+  socket.emit("sendMessage",{
+    userId:userIdInput.value,
+    password:passwordInput.value,
+    message:message.value
+  });
 
-  sendSound.currentTime = 0;
   sendSound.play();
-
   message.value="";
 }
 
 socket.on("receiveMessage",data=>{
-  const mine = data.user === userInput.value;
-  const div = document.createElement("div");
+  const mine = data.userId === userIdInput.value;
+  const div=document.createElement("div");
 
-  div.className = "msg " + (mine?"right":"left");
-  div.setAttribute("data-id", data.id);
+  div.className="msg "+(mine?"right":"left");
+  div.setAttribute("data-id",data.id);
 
-  div.innerHTML = `
-    <div class="user">${data.user}</div>
+  div.innerHTML=`
+    <div class="user">${data.userId}</div>
     <div>${data.message}</div>
     ${mine?`<div class="tick-box">
       <span class="tick" id="t${data.id}">✔✔</span>
     </div>`:""}
   `;
-
   chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
+  chat.scrollTop=chat.scrollHeight;
 
   if(!mine){
-    receiveSound.currentTime = 0;
     receiveSound.play();
-
     socket.emit("messageSeen",{
       msgId:data.id,
-      user:userInput.value,
-      friend:friendInput.value
+      userId:userIdInput.value,
+      password:passwordInput.value
     });
   }
 });
