--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,11 @@ body{
   font-size:18px;
 }
 
+.status{
+  font-size:12px;
+  opacity:.8;
+}
+
 /* LOGIN */
 .login{
   padding:8px;
@@ -60,12 +65,11 @@ body{
 
 /* CHAT */
 .chat{
-  height:calc(100vh - 280px);
+  height:calc(100vh - 300px);
   overflow-y:auto;
   padding:10px;
 }
 
-/* MESSAGE */
 .msg{
   max-width:75%;
   padding:8px 12px;
@@ -76,25 +80,26 @@ body{
 .sender{
   font-size:11px;
   color:#555;
-  margin-bottom:2px;
+}
+.time{
+  font-size:10px;
+  color:#777;
+  text-align:right;
 }
 .right{
   background:var(--my);
   margin-left:auto;
-  border-bottom-right-radius:0;
 }
 .left{
   background:var(--other);
   margin-right:auto;
-  border-bottom-left-radius:0;
 }
 .tick{
   font-size:11px;
-  text-align:right;
   color:#777;
 }
 .seen{
-  color:#2196f3; /* BLUE */
+  color:#2196f3;
 }
 
 /* INPUT */
@@ -118,9 +123,10 @@ body{
   color:white;
   font-size:18px;
 }
-.footer{
-  text-align:center;
+
+.typing{
   font-size:12px;
+  padding-left:10px;
   color:#555;
 }
 </style>
@@ -133,7 +139,10 @@ body{
   <p>Developed by <b>Sanchay Dutt</b></p>
 </div>
 
-<div class="header">Private Chat</div>
+<div class="header">
+  Private Chat
+  <div id="status" class="status"></div>
+</div>
 
 <div class="login">
   <input id="room" placeholder="Room ID (same for both)">
@@ -142,13 +151,12 @@ body{
 </div>
 
 <div id="chat" class="chat"></div>
+<div id="typing" class="typing"></div>
 
 <div class="input-box">
-  <input id="message" placeholder="Type message">
+  <input id="message" placeholder="Type message" oninput="typing()">
   <button onclick="send()">➤</button>
 </div>
-
-<div class="footer">Developed by Sanchay Dutt</div>
 
 <audio id="sendSound" src="send.mp3"></audio>
 <audio id="receiveSound" src="receive.mp3"></audio>
@@ -157,59 +165,67 @@ body{
 <script>
 const socket = io();
 const chat = document.getElementById("chat");
-const sendSound = document.getElementById("sendSound");
-const receiveSound = document.getElementById("receiveSound");
+const statusDiv = document.getElementById("status");
+const typingDiv = document.getElementById("typing");
 
-let ROOM = "", USER = "";
+let ROOM="", USER="";
 
 function login(){
   ROOM = room.value.trim();
   USER = username.value.trim();
   if(!ROOM || !USER) return alert("Enter room & name");
-
-  socket.emit("joinRoom",{room:ROOM});
+  socket.emit("joinRoom",{room:ROOM,user:USER});
 }
 
 function addMsg(m){
-  const mine = m.user === USER;
+  const mine = m.user===USER;
   const d=document.createElement("div");
   d.className="msg "+(mine?"right":"left");
-  d.setAttribute("data-id",m.id);
-
   d.innerHTML=`
     <div class="sender">${m.user}</div>
     <div>${m.text}</div>
+    <div class="time">${m.time}</div>
     ${mine?`<div class="tick ${m.seen?"seen":""}" id="t${m.id}">✔✔</div>`:""}
   `;
   chat.appendChild(d);
   chat.scrollTop=chat.scrollHeight;
 
   if(!mine){
-    receiveSound.play();
     socket.emit("messageSeen",{room:ROOM,msgId:m.id});
   }
 }
 
 function send(){
-  if(!ROOM || !USER) return alert("Join chat first");
+  if(!ROOM) return;
   if(!message.value) return;
 
-  socket.emit("sendMessage",{
-    room:ROOM,
-    user:USER,
-    message:message.value
-  });
-
+  socket.emit("sendMessage",{room:ROOM,user:USER,message:message.value});
   sendSound.play();
   message.value="";
 }
+
+function typing(){
+  if(ROOM) socket.emit("typing",{room:ROOM,user:USER});
+}
+
+socket.on("typing",user=>{
+  typingDiv.innerText = user+" is typing...";
+  setTimeout(()=>typingDiv.innerText="",1000);
+});
+
+socket.on("userStatus",d=>{
+  statusDiv.innerText = d.user+" is "+d.status;
+});
 
 socket.on("loadOldMessages",msgs=>{
   chat.innerHTML="";
   msgs.forEach(addMsg);
 });
 
-socket.on("receiveMessage",addMsg);
+socket.on("receiveMessage",m=>{
+  addMsg(m);
+  if(m.user!==USER) receiveSound.play();
+});
 
 socket.on("messageSeenUpdate",id=>{
   const t=document.getElementById("t"+id);
